--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public\styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -21,10 +21,10 @@
     <div class="z-20 absolute flex justify-center items-center w-full h-screen">
         <img class="w-80" src="/public/sl.png" width="500" height="800"  >
     </div>
-    <div class="flex-col relative z-30 flex justify-center items-center w-full h-screen"> 
-        <p class="">IT'S CLOSER<br> 
+    <div class="gap-5 flex-col relative z-30 flex justify-center items-center w-full h-screen"> 
+        <p class=" abc text-white text-[100px] font-bold text-center pb-20">IT'S CLOSER<br> 
             THAN YOU THINK</p>
-        <button class="bg-yellow-500 border-2 border-green-500 px-4 py-2 text-center text-base hover:shadow-md" >CHECKOUT <br> SHRESHTA 23 <br></button>
+        <button class="bg-[#FFF500] border-2 border-[#345400] border-4 px-4 py-2 text-center text-base hover:shadow-md " >CHECKOUT <br> SHRESHTA 23 <br></button>
         
     </div>
 </body>
