optimizing the pictures

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
     <link rel="stylesheet" href="public\styles.css">
+    <link rel="shortcut icon" href="/public/shreshta.webp" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            background-image: url('/public/background.jpg'); 
+            background-image: url('/public/background.webp'); 
             background-size:cover;
             background-position:center;
             background-repeat:no-repeat ;
@@ -22,7 +23,7 @@
         <p class="intergral italic font-sans text-3xl shadow  text-white font-extrabold leading-loose">SHRESHTA</p>
     </div>
     <div class="z-20 absolute flex justify-center items-center w-full h-screen">
-          <img class="w-80" src="/public/sl.png" width="500" height="800"  >
+          <img class="w-80" src="/public/shreshta.webp" width="500" height="800"  >
         
     </div>
     <div class="flex-col relative z-30 flex justify-center items-center w-full h-screen"> 
