--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Get ready for an electrifying experience at SHRESHTA 2024!">
+    <meta name="keywords" content="technocultural fest, events, workshops, performances">
+    <meta name="author" content="SHRESHTA 24">
+
     <title>Coming Soon</title>
     <link rel="stylesheet" href="public\styles.css">
     <link rel="shortcut icon" href="/public/shreshta.webp" type="image/x-icon">
